--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,11 @@
 language: node_js
+node_js:
+  - "stable"
+install:
+  - npm ci
+script:
+  - npm run lint
+  - npm run build
+cache:
+  directories:
+    - "node_modules"
