adding work done on the reserve page component. basics for table and map addd

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^16.10.2",
+    "react-data-table-component": "^3.6.0",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "pretest": "eslint --ignore-path .gitignore .",
