--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-data-table-component": "^3.6.0",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.0"
   },
