--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.6.0",
     "lodash": "^4.17.15",
     "react": "^16.10.2",
     "react-data-table-component": "^3.6.0",
