--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "@material-ui/core": "^4.6.0",
     "lodash": "^4.17.15",
     "react": "^16.10.2",
-    "react-data-table-component": "^3.6.0",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "styled-components": "^4.4.0"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "pretest": "eslint --ignore-path .gitignore .",
